<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_state_constraintLayoutRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/activity_main_state_imageView_ill"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:srcCompat="@drawable/ic_ill"
        app:layout_constraintBottom_toTopOf="@id/activity_main_state_view_generate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/activity_main_state_view_cover"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/activity_main_state_view_generate" />

    <View
        android:id="@+id/activity_main_state_view_generate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:background="@drawable/shape_card_view_gray"
        app:layout_constraintBottom_toTopOf="@id/activity_main_state_view_validation" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/activity_main_state_imageView_generate"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="@+id/activity_main_state_view_generate"
        app:layout_constraintEnd_toEndOf="@+id/activity_main_state_view_generate"
        app:layout_constraintStart_toStartOf="@+id/activity_main_state_view_generate"
        app:layout_constraintTop_toTopOf="@+id/activity_main_state_view_generate"
        app:layout_constraintVertical_bias="0.4"
        app:srcCompat="@drawable/ic_plus" />

    <TextView
        android:id="@+id/activity_main_state_textView_generate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:fontFamily="@font/iran_sans_bold"
        android:gravity="center"
        android:text="@string/generate_national_code"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="@+id/activity_main_state_view_generate"
        app:layout_constraintEnd_toEndOf="@+id/activity_main_state_view_generate"
        app:layout_constraintStart_toStartOf="@+id/activity_main_state_view_generate"
        app:layout_constraintTop_toTopOf="@+id/activity_main_state_view_generate"
        app:layout_constraintVertical_bias="0.8" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_main_state_constraintLayout_generateCard"
        android:layout_width="0dp"
        android:layout_height="@dimen/_130sdp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_card"
        android:fontFamily="@font/iran_sans_bold"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="@+id/activity_main_state_view_validation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_main_state_view_validation">


        <com.hanks.htextview.evaporate.EvaporateTextView
            android:id="@+id/textView_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/sample_national_code"
            android:textColor="@color/white"
            android:textSize="@dimen/_22sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView_copyCode"
            android:layout_width="@dimen/_42sdp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/ripple"
            android:padding="@dimen/_10sdp"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView_code"
            app:layout_constraintTop_toBottomOf="@+id/textView_code"
            app:srcCompat="@drawable/ic_copy" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView_generateCode"
            android:layout_width="@dimen/_42sdp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/ripple"
            android:padding="@dimen/_10sdp"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/textView_code"
            app:layout_constraintTop_toBottomOf="@+id/textView_code"
            app:srcCompat="@drawable/ic_refresh" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/activity_main_state_view_validation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:background="@drawable/shape_card_view_white"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/activity_main_state_imageView_validate"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="@+id/activity_main_state_view_validation"
        app:layout_constraintEnd_toEndOf="@+id/activity_main_state_view_validation"
        app:layout_constraintStart_toStartOf="@+id/activity_main_state_view_validation"
        app:layout_constraintTop_toTopOf="@+id/activity_main_state_view_validation"
        app:layout_constraintVertical_bias="0.4"
        app:srcCompat="@drawable/ic_checked" />

    <TextView

        android:id="@+id/activity_main_state_textView_validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:fontFamily="@font/iran_sans_bold"
        android:gravity="center"
        android:text="@string/validate_national_code"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="@+id/activity_main_state_view_validation"
        app:layout_constraintEnd_toEndOf="@+id/activity_main_state_view_validation"
        app:layout_constraintStart_toStartOf="@+id/activity_main_state_view_validation"
        app:layout_constraintTop_toTopOf="@+id/activity_main_state_view_validation"
        app:layout_constraintVertical_bias="0.8" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_main_state_constraintLayout_validateCard"
        android:layout_width="0dp"
        android:layout_height="@dimen/_130sdp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_card"
        android:fontFamily="@font/iran_sans_bold"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.8">


        <EditText
            android:id="@+id/editText_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/selector_edit_text"
            android:gravity="center"
            android:hint="@string/sample_national_code_2"
            android:inputType="number"
            android:maxLength="10"
            android:textSize="@dimen/_22sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView_checkValidateCode"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/ripple_circle"
            android:padding="@dimen/_10sdp"
            android:tint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/editText_code"
            app:layout_constraintEnd_toEndOf="@+id/editText_code"
            app:layout_constraintStart_toStartOf="@+id/editText_code"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_tick" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView_repeat"
            android:layout_width="@dimen/_42sdp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/ripple"
            android:padding="@dimen/_10sdp"
            android:tint="@color/white"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/textView_status"
            app:layout_constraintEnd_toStartOf="@+id/textView_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView_status"
            app:srcCompat="@drawable/ic_refresh" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:fontFamily="@font/iran_sans"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_17sdp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/editText_code"
            app:layout_constraintEnd_toEndOf="@+id/editText_code"
            app:layout_constraintStart_toStartOf="@+id/editText_code"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/national_code_true" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>